@@ -8,7 +8,7 @@
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Xfce Power Manager</property>
     <property name="window_position">center-on-parent</property>
-    <property name="icon_name">gpm-ac-adapter</property>
+    <property name="icon_name">xfpm-ac-adapter</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="subtitle" translatable="yes">Power manager settings</property>
@@ -29,6 +29,7 @@
                     <property name="headers_visible">False</property>
                   </widget>
                   <packing>
+                    <property name="expand">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -1229,7 +1230,6 @@
                     </child>
                   </widget>
                   <packing>
-                    <property name="expand">False</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
