@@ -1,4 +1,7 @@
 
+2009-05-16 19:06 Ali aliov@xfce.org 
+	 * : Open settings dialog when tray icon is clicked
+
 2009-05-16 18:55 Ali aliov@xfce.org 
 	 * : Reduce the settings dialog size
 
